# django-blog

./: .env.example  .gitignore  README.MD  backup.json  data.csv  db.sqlite3  main.py  pyproject.toml  requirements.txt  robots.txt
.github/workflows/: main.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0002_remove_customuser_bio_alter_customuser_email.py  0003_alter_customuser_image.py  0003_customuser_bio_customuser_gender_customuser_image_and_more.py  0004_alter_customuser_slug.py  0004_alter_customuser_website.py  0005_alter_customuser_email_alter_customuser_image.py  0006_alter_customuser_gender.py  0007_customuser_slug.py  0008_alter_customuser_image.py  0009_customuser_phone.py
accounts/templates/: 404.html  base.html  footer.html  index.html  messages.html  navbar.html  queries.html
blog/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_content.py  0002_rename_timestamp_contact_date_contact_time.py  0003_alter_blogpost_author.py  0003_blogpost_author_blogpost_status.py  0004_alter_blogpost_author.py  0004_rename_user_comment_author.py  0005_tag_remove_blogpost_tags_blogpost_tags.py  0006_remove_blogpost_gallery_remove_blogpost_tags_and_more.py  0007_remove_blogpost_categories_blogpost_categories.py  0008_alter_blogpost_content.py  0009_category_description_alter_category_name.py  0010_category_categoryimage.py  0011_contact.py  0019_comment.py  (+10 more)
djangoBlog/: settings.py  urls.py  views.py  wsgi.py
(+37 files in other folders)
