[project]
name = "django-blog-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==2.0.0",
    "charset-normalizer==3.4.0",
    "cryptography==44.0.0",
    "django==5.2.2",
    "django-allauth==65.3.1",
    "django-analytical==3.1.0",
    "django-ckeditor-5==0.2.15",
    "django-phonenumber-field==8.0.0",
    "google-api-core==2.23.0",
    "google-api-python-client==2.154.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.66.0",
    "gunicorn==23.0.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "lxml==5.3.0",
    "mysqlclient==2.2.6",
    "packaging==24.2",
    "phonenumbers==8.13.51",
    "pillow==12.2.0",
    "proto-plus==1.25.0",
    "protobuf==5.29.1",
    "psycopg==3.2.3",
    "psycopg-binary==3.3.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pyparsing==3.2.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "soupsieve==2.6",
    "sqlparse==0.5.5",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "webencodings==0.5.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
